# tree-sitter-traversal

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: traversal.rs
src/: lib.rs
